[package]
name = "privacyserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17"
base64 = "0.21"
rand       = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }    # BigUint + RandBigInt :contentReference[oaicite:0]{index=0}
num-traits = "0.2"
num-prime  = { version = "0.4", features = ["big-int"] } # primes + Miller-Rabin on num-bigint :contentReference[oaicite:1]{index=1}